# micrograd-cpp

./: CMakeLists.txt
src/: Value.hpp  conv2d.cpp  conv2d.h  layer.cpp  layer.h  main.cpp  mlp.cpp  mlp.h  neuron.cpp  neuron.h  neuron.hpp  utils.cpp  utils.h  utils.hpp  value.cpp  value.h  value.hpp  value_network.cpp  value_network.h  value_network.hpp  value_tensor.h
